--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "deep-get-set": "^1.1.0",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "reselect": "^3.0.1"
   }
 }
